Fix video alignment issue

--- a/src/styles/editor/editor-content.scss
+++ b/src/styles/editor/editor-content.scss
@@ -755,6 +755,8 @@
 
   // Embed
   .neeto-editor__video-wrapper {
+    padding-left: 3px;
+
     &.neeto-editor__video--bordered {
 
       video,
